MB-44079: Merge sanity checks for In-Order Commit in PDM

Change-Id: I8d12182043208b608841e9891ef8dc66740d53e2
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/145313
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>